[project]
name = "mangapark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "bs4>=0.0.2",
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "sanitize-filename>=1.2.0",
]
